k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suvidha-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: suvidha-client
  template:
    metadata:
      labels:
        app: suvidha-client
    spec:
      containers:
        - name: suvidha-client
          image: suvidha-client:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: suvidha-client
spec:
  selector:
    app: suvidha-client
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
