k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: suvidha-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kiosk.suvidha.gov
      secretName: suvidha-tls
  rules:
    - host: kiosk.suvidha.gov
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: suvidha-api-gateway
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: suvidha-client
                port:
                  number: 80
