k8s/mtls-istio.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: suvidha-default-mtls
  namespace: default
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: suvidha-mesh-mtls
  namespace: default
spec:
  host: "*.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
